<resources>
    <string name="app_name">CaptureTheFlag</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="intro1_fragment_label">Intro1 Fragment</string>
    <string name="intro2_fragment_label">Intro2 Fragment</string>
    <string name="intro3_fragment_label">Intro3 Fragment</string>
    <string name="intro4_fragment_label">Intro4 Fragment</string>
    <string name="map_fragment_label">Map Fragment</string>
    <string name="profile_fragment_label">Profile</string>
    <string name="home_fragment_label">Home</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Login</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_button">Log In</string>
    <string name="create_acc_button">Create now</string>
    <string name="no_acc_label">Don\'t have account?</string>
    <string name="home_label">Home</string>
    <string name="notifications_label">Notifications</string>
    <string name="rankings_label">Rankings</string>
    <string name="friends_label">Friends</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome To Capture The Flag</string>
    <string name="welcome_desc">Let us guide you through setting up your profile.</string>
    <string name="skip">Skip</string>
    <string name="intro2">First, set your profile picture</string>
    <string name="intro2_desc">It will be easier for your friends to find you.</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="intro3">Tell us about yourself!</string>
    <string name="intro4">You\'re all set!</string>
    <string name="intro4_desc">Go find your friends and get ready for new conquests!</string>
    <string name="get_started">Get started</string>
    <string name="title">Capture The Flag</string>
    <string name="create_game">Create Game</string>
    <string name="find_friend">Find Friend</string>
    <string name="how_to_play">How to Play</string>
    <string name="add_friend">Add friend</string>
    <string name="first_and_last_name">First Last</string>
    <string name="about_me">About me</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="change_your_password">Change your password</string>
    <string name="log_out">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="scan">Scan</string>
    <string name="let_your_friends_discover_you">Let your friends find you</string>
    <string name="no_friends">You don\'t have any friends yet</string>
    <string name="no_friends_desc">Connect with friends and capture the flag together</string>
    <string name="invite_friend">Invite friend</string>
    <string name="invite_friendds">Invite friends</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="share_code">Share game code with your friends and start the game</string>
    <string name="start">Start</string>
    <string name="join_game">Join Game</string>
    <string name="choose_team">Choose Team</string>
    <string-array name="how_to_play_items">
        <item>You</item>
        <item>Teammate</item>
        <item>Enemy</item>
        <item>Team Barrier</item>
        <item>Enemy Barrier</item>
        <item>Team Flag</item>
        <item>Enemy Flag</item>
    </string-array>

    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>

    <string-array name="map_filters">
        <item>Friends</item>
        <item>Players</item>
        <item>Team Barriers</item>
        <item>Enemy Barriers</item>
        <item>Team Flag</item>
        <item>Enemy Flag</item>
    </string-array>


</resources>