<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">

    <group>
        <item
            android:id="@+id/home"
            android:icon="@drawable/baseline_home_24"
            app:iconTint="@color/blue"
            android:title="@string/home_label" />

        <item
            android:id="@+id/notifications"
            android:icon="@drawable/baseline_notifications_black_24"
            app:iconTint="@color/blue"
            android:title="@string/notifications_label"></item>

        <item
            android:id="@+id/rankings"
            android:icon="@drawable/baseline_emoji_events_24"
            app:iconTint="@color/blue"
            android:title="@string/rankings_label"></item>

        <item
            android:id="@+id/friends"
            android:icon="@drawable/baseline_people_black_24"
            app:iconTint="@color/blue"
            android:title="@string/friends_label"></item>

        <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:icon="@drawable/baseline_settings_black_24"
            app:iconTint="@color/blue"
            app:showAsAction="never" />

    </group>

    <group >
        <item
            android:id="@+id/logout"
            android:icon="@drawable/baseline_logout_black_24"
            app:iconTint="@color/blue"
            android:title="@string/log_out"></item>
    </group>

</menu>