<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="elfak.mosis.capturetheflag.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="elfak.mosis.capturetheflag.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_Intro1Fragment"
            app:destination="@id/Intro1Fragment" />
    </fragment>

    <fragment
        android:id="@+id/Intro1Fragment"
        android:name="elfak.mosis.capturetheflag.Intro1Fragment"
        android:label="@string/intro1_fragment_label"
        tools:layout="@layout/fragment_intro1">

        <action
            android:id="@+id/action_Intro1Fragment_to_Intro2Fragment"
            app:destination="@id/Intro2Fragment" />
    </fragment>
    <fragment
        android:id="@+id/Intro2Fragment"
        android:name="elfak.mosis.capturetheflag.Intro2Fragment"
        android:label="@string/intro2_fragment_label"
        tools:layout="@layout/fragment_intro2">

    </fragment>
</navigation>