<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".common.HomeFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonCreateGame"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="34dp"
        android:backgroundTint="@color/blue"
        android:text="@string/create_game"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonJoinGameWithCode"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="34dp"
        android:backgroundTint="@color/blue"
        android:text="@string/join_game"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonFindFriend"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="34dp"
        android:backgroundTint="@color/blue"
        android:text="@string/find_friend"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonHowToPlay"
        android:layout_width="254dp"
        android:layout_height="48dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="34dp"
        android:backgroundTint="@color/blue"
        android:text="@string/how_to_play"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>