<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile.ProfileFragment">

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="427dp"
        android:layout_height="337dp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:text="@string/username_label"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewFirstAndLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/first_and_last_name"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <Button
            android:id="@+id/buttonAddFriend"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="96dp"
            android:text="@string/add_friend"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewAboutMeProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:text="@string/about_me"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputAboutMeProfile"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="373dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="40dp"
        android:hint="About me">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>