<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Intro3Fragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewIntro3"
        android:layout_width="match_parent"
        android:layout_height="457dp"
        android:src="@drawable/intro3" />

    <TextView
        android:id="@+id/textViewIntro3"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_below="@+id/imageViewIntro3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="213dp"
        android:text="@string/intro3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonSkip3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewIntro3"
        android:layout_alignEnd="@+id/textViewIntro3"
        android:layout_marginTop="217dp"
        android:layout_marginEnd="258dp"
        android:background="#00FFFFFF"
        android:text="@string/skip"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonNext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewIntro3"
        android:layout_alignStart="@+id/textViewIntro3"
        android:layout_marginStart="253dp"
        android:layout_marginTop="216dp"
        android:backgroundTint="@color/blue"
        android:text="@string/next"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>