<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/profilePicView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="9dp">

        <ImageView
            android:id="@+id/imageViewFriend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/friendName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_and_last_name"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/friendUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_label"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>


    <Space
        android:layout_width="152dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonIconInvite"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="24dp"
        android:visibility="gone"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/invite_friend"
        app:icon="@drawable/baseline_add_24"
        app:iconTint="@color/orange" />

    <Button
        android:id="@+id/buttonIconInvited"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="24dp"
        android:visibility="gone"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/invite_friend"
        app:icon="@drawable/baseline_done_24"
        app:iconTint="@color/green" />

</LinearLayout>